[package]
name = "mock-api-server"
version = "1.0.0"
edition = "2021"
authors = ["Mock API Team"]
description = "一个功能简单、易于使用的MockAPI工具，支持快速创建、管理和测试API接口"
license = "MIT"

[[bin]]
name = "mock-api-server"
path = "src/main.rs"

[dependencies]
# Web框架
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 静态文件嵌入
rust-embed = "6.0"
mime_guess = "2.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"